# topup

./: .gitignore  AI_USAGE.md  CLAUDE.md  DESIGN.md  LICENSE  MULTIHOST.md  README.md  SECURITY-AUDIT.md  backlog.md  changelog.md  dune-project  topup.opam
.claude/skills/caml/: SKILL.md
lib/mcp/: blob.ml  blob.mli  channel.ml  channel.mli  dune  host_registry.ml  host_registry.mli  local_session.ml  local_session.mli  proxy.ml  proxy.mli  remote_host.ml  remote_host.mli  rpc.ml  rpc.mli  server.ml  server.mli  session_pool.ml  session_pool.mli  tools.ml  tools.mli
lib/topup/: capture.ml  capture.mli  dune  error.ml  error.mli  eval_backend.mli  pretty.ml  pretty.mli  promote.ml  promote.mli  session.ml  session.mli  spill.ml  spill.mli
lib/topup_entry/: dune  entry.ml
lib/topup_eval_byte/: dune  eval_backend.ml
lib/topup_eval_native/: dune  eval_backend.ml
lib/topup_runtime/: dune  topup_runtime.ml  topup_runtime.mli
lib/topup_util/: dune  topup_util.ml  topup_util.mli
test/: back_channel.t  back_channel_confine.t  checkpoint.t  deaf_socket_server.ml  dune  handshake_timeout.t  host_routing.t  opt.t  promote.t  proxy.t  secure_files.t  session_pool.t  socket.t  socket_client.ml  socket_lifecycle.t  stdlib_submodules.t  test_mcp.ml  test_session.ml  xfer.t
test/fixtures/topup_load_fixture/: dune  topup_load_fixture.ml
test/smoke/: llm_playbook.md  replay_2026-06-04.md  replay_2026-06-04_post_fix.md
