(tests
 (names test_session test_mcp)
 (modes byte)
 (modules test_session test_mcp)
 (link_flags (:standard -linkall))
 (libraries topup topup_eval_byte mcp topup_runtime unix threads.posix)
 (deps fixtures/topup_load_fixture/topup_load_fixture.cma))

(executable
 (name socket_client)
 (modes byte_complete)
 (modules socket_client)
 (libraries unix yojson))

(executable
 (name deaf_socket_server)
 (modes byte_complete)
 (modules deaf_socket_server)
 (libraries unix))

(cram
 (deps
  %{bin:topup}
  %{bin:topup-opt}
  ./socket_client.bc.exe
  ./deaf_socket_server.bc.exe
  fixtures/topup_load_fixture/topup_load_fixture.cma
  fixtures/topup_load_fixture/topup_load_fixture.cmi))
